# argos3-leo

./: .gitignore  README.md
src/: CMakeLists.txt
src/cmake/: ARGoSPackaging.cmake  ROSBuildChecks.cmake  TargetLeo.cmake
src/plugins/: CMakeLists.txt
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/leo/: CMakeLists.txt
src/plugins/robots/leo/control_interface/: ci_leo_ar_tag_sensor.cpp  ci_leo_ar_tag_sensor.h  ci_leo_localization_sensor.cpp  ci_leo_localization_sensor.h  ci_leo_navigation_actuator.cpp  ci_leo_navigation_actuator.h  ci_leo_odometry_sensor.cpp  ci_leo_odometry_sensor.h  ci_leo_posetwist_actuator.cpp  ci_leo_posetwist_actuator.h  ci_leo_tag_sensor.cpp  ci_leo_tag_sensor.h  ci_leo_wifi_actuator.cpp  ci_leo_wifi_actuator.h  ci_leo_wifi_sensor.cpp  ci_leo_wifi_sensor.h
src/plugins/robots/leo/real_robot/: main.cpp  real_leo.cpp  real_leo.h  real_leo_ar_tag_sensor.cpp  real_leo_ar_tag_sensor.h  real_leo_device.h  real_leo_localization_sensor.cpp  real_leo_localization_sensor.h  real_leo_navigation_actuator.cpp  real_leo_navigation_actuator.h  real_leo_odometry_sensor.cpp  real_leo_odometry_sensor.h  real_leo_posetwist_actuator.cpp  real_leo_posetwist_actuator.h  real_leo_ros_device.h  real_leo_tag_sensor.cpp  real_leo_tag_sensor.h  real_leo_wifi_actuator.cpp  real_leo_wifi_actuator.h  real_leo_wifi_sensor.cpp  real_leo_wifi_sensor.h
src/plugins/robots/leo/simulator/: dynamics2d_leo_model.cpp  dynamics2d_leo_model.h  leo_ar_tag_sensor.cpp  leo_ar_tag_sensor.h  leo_entity.cpp  leo_entity.h  leo_measures.cpp  leo_measures.h  leo_odometry_sensor.cpp  leo_odometry_sensor.h  leo_posetwist_default_actuator.cpp  leo_posetwist_default_actuator.h  leo_posetwist_ros_actuator.cpp  leo_posetwist_ros_actuator.h  leo_wifi_default_actuator.cpp  leo_wifi_default_actuator.h  leo_wifi_medium_sensor.cpp  leo_wifi_medium_sensor.h  qtopengl_leo.cpp  qtopengl_leo.h
src/plugins/robots/leo/simulator/models/: leo.mtl
src/plugins/simulator/: CMakeLists.txt
src/plugins/simulator/entities/: CMakeLists.txt  wifi_equipped_entity.cpp  wifi_equipped_entity.h
src/plugins/simulator/media/: CMakeLists.txt  wifi_medium.cpp  wifi_medium.h
src/testing/: .lldbinit  CMakeLists.txt  LeoTestController.cpp  LeoTestController.h  LeoTestExperiment.argos  SimTestController.cpp  SimTestExperiment.argos  TestController.cpp  TestController.h  leo_swarm.argos  leo_swarm_controller.cpp  leo_swarm_controller.h  leo_test_communication.argos  leo_test_communication.cpp  leo_test_communication.h  leo_test_controller.cpp  leo_test_controller.h  leo_test_experiment.argos  main.cpp  sim_test_communication.argos  sim_test_controller.cpp  sim_test_controller.h  testexperiment.argos
src/tools/: upload_to_leo.sh
